--- a/day-06/index.html
+++ b/day-06/index.html
@@ -11,60 +11,60 @@
 </head>
 
 <body>
-    <header>
-        <h1>Informatics Student</h1>
+    <header class="row align-items-start ">
+        <h1 class="col-md-8 display-2">Informatics Student</h1>
         <span>A Senior in the Informatics Programm at the University of Washington, seeking meaningful employment.</span>
-        <nav>
-            <ul>
-                <li><a href="#interests">Interests</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">About</a></li>
+        <nav class="col-md-auto nav">
+            <ul class="row">
+                <li><a class="col btn btn-primary" href="#interests">Interests</a></li>
+                <li><a class="col btn btn-primary" href="#projects">Projects</a></li>
+                <li><a class="col btn btn-primary" href="#about">About</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="interests">
+    <main class="row justify-content-md-center">
+        <section id="interests"class="col-2">
             <h2>My Interests</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex veritatis nihil ipsam neque, necessitatibus
                 perspiciatis consequatur officiis inventore deserunt illum velit obcaecati. Impedit, rerum! Suscipit ab
                 vel voluptatibus assumenda debitis.</p>
         </section>
-        <section id="projects">
+        <section id="projects" class="col-6">
             <h2>Projects</h2>
-            <div>
-                <div>
-                    <h3>Project 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
+            <div  class="row">
+                <div class="card col">
+                    <h3 class="card-title" style="background-color: #eee;">Project 1</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
                         quis, quo soluta amet odit tempora voluptatem corporis animi optio ipsum eaque consequuntur
                         voluptate odio omnis quod?</p>
-                    <a href="">View Project</a>
+                    <a class="btn btn-primary" href="">View Project</a>
                 </div>
-                <div>
-                    <h3>Project 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
+                <div class="col">
+                    <h3 class="card-title" style="background-color: #eee;">Project 2</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
                         quis, quo soluta amet odit tempora voluptatem corporis animi optio ipsum eaque consequuntur
                         voluptate odio omnis quod?</p>
-                    <a href="">View Project</a>
+                    <a class="btn btn-primary" href="">View Project</a>
                 </div>
-                <div>
-                    <h3>Project 3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
+                <div class="col">
+                    <h3 class="card-title" style="background-color: #eee;">Project 3</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quisquam tempore sint reiciendis
                         quis, quo soluta amet odit tempora voluptatem corporis animi optio ipsum eaque consequuntur
                         voluptate odio omnis quod?</p>
-                    <a href="">View Project</a>
+                    <a class="btn btn-primary" href="">View Project</a>
                 </div>
             </div>
 
         </section>
         </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptate placeat debitis officia
+        <section id="about" class="card col-4 align-items-center">
+            <h2 class="card-title">About</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptate placeat debitis officia
                 nesciunt similique iure temporibus, iste sapiente nemo possimus laborum impedit quaerat dolore. Placeat
                 quod officiis maxime rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quo. Impedit
                 molestiae quaerat omnis laboriosam deleniti iure sit dolore quasi quidem repudiandae. Quo inventore
                 tempora exercitationem assumenda asperiores doloremque molestiae.</p>
-            <img src="./img/College-Student-Discounts.jpg" alt="Personal profile picture">
+            <img class="card-img-top" src="./img/College-Student-Discounts.jpg" alt="Personal profile picture">
         </section>
     </main>
     <footer>
